syntax = "proto3";

package auth.service;
option go_package = "protos/authpb;authpb";

service Auth {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Signup(SignupRequest) returns (SignupResponse);
  rpc InvalidateRefreshToken(InvalidateRefreshTokenRequest) returns (EmptyResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message UserResponse {
  string id = 1;
  string username = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  UserResponse user = 3;
}

message SignupRequest {
  string name = 1;
  string username = 2;
  string password = 3;
  string verification_password = 4;
}

message SignupResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message RefreshTokenRequest {
  string user_id = 1;
  string refresh_token = 2;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message InvalidateRefreshTokenRequest {
  string user_id = 1;
  string refresh_token = 2;
}

message EmptyResponse {}
