syntax = "proto3";

package user.service;
option go_package = "protos/userpb;userpb";

service User {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc GetUserByUsername(GetUserByUsernameRequest) returns (GetUserResponse);
  rpc GetUserBalance(GetUserRequest) returns (UserBalanceResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserByUsernameRequest {
  string username = 1;
}

message GetUserResponse {
  string user_id = 1;
  string name = 2;
  string username = 3;
  optional string bio = 4;
  double net_balance = 5;
}

message UserBalanceResponse {
  double credit = 1;
  double debit = 2;
  double net = 3;
}

message UpdateUserRequest {
  string user_id = 1;
  string name = 2;
  string username = 3;
  optional string bio = 4;
}

message UserResponse {
  string user_id = 1;
  string name = 2;
  string username = 3;
  optional string bio = 4;
}
